...
            <LinearLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/btn_toolbar_back_arrow"
                    android:layout_width="@dimen/track_item_control_btn_size"
                    android:layout_height="@dimen/track_item_control_btn_size"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_gravity="center_vertical"
                    android:background="@color/transparent"
                    android:onClick="@{()->audioBookDetailsViewModel.onBackArrowPressed()}"
                    android:src="@drawable/ic_keyboard_arrow_left_white"
                    android:contentDescription="@string/back_screen_button" />

                <TextView
                    android:id="@+id/tv_toolbar_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_mid"
                    android:gravity="start|center_vertical"
                    app:bookTitle="@{audioBookDetailsViewModel.audioBookMetadata}"
...
                            style="@style/BookActionButtonTextStyle"
                            android:text="@string/play"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/textView_book_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_mid"
                    android:layout_marginEnd="@dimen/margin_min"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintBottom_toTopOf="@+id/book_length"
...
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chapter_label"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/pb_content_loading"
...
