<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="audio_book_list_title">Latest Audio Books</string>
    <string name="thumbnail">AudioBook Thumbnail</string>
    <string name="audiobook_search">audiobook search</string>
    <string name="type_here">search here</string>
    <string name="press_to_clear_search">press to clear search</string>
    <string name="web_search_icon">web search</string>
    <string name="no_results_found">No Results Found! Try rephrasing</string>
    <string name="audiobook_download">Check Downloads</string>
    <string name="toolbar_nav_hamburger">Toolbar menu</string>
    <string name="my_books">My Books</string>
    <string name="listen_later">Listen later</string>
    <string name="downloads">Downloads</string>
    <string name="menu_others">Others</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="report">Report</string>
    <string name="rate">Rate</string>
    <string name="library">Library</string>
    <string name="profile_picture">profile picture</string>
    <string name="guest_user">by AllSoftDroid</string>
    <string name="audiobook_refresh">Refresh list</string>
    <string name="pic_attribution">Animal Face Vectors by Vecteezy</string>
    <string name="completed_message">Completed</string>
    <string name="loading_message">Loading</string>
    <string name="network_error_message">Network Error</string>
    <string name="android_vending_package">com.android.vending</string>
</resources>